--- a/src/app/components/settings-pages/categories/categories.component.scss
+++ b/src/app/components/settings-pages/categories/categories.component.scss
@@ -78,7 +78,7 @@
     margin-bottom: 24px;
 
     .search-container {
-        max-width: 500px;
+        max-width: 100%;
 
         .search-input-wrapper {
             position: relative;
