--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -21,25 +21,38 @@
                     <i class="fa-solid fa-tags"></i>
                     <span>Subcategories</span>
                 </button>
-                <button class="action-btn" routerLink="/customers">
-                    <i class="fa-solid fa-users"></i>
-                    <span>Manage Customers</span>
-                </button>
-                <button class="action-btn" routerLink="/order">
-                    <i class="fa-solid fa-receipt"></i>
-                    <span>View Orders</span>
-                </button>
-                <button class="action-btn" routerLink="/settings">
-                    <i class="fa-solid fa-cog"></i>
-                    <span>Settings</span>
-                </button>
-                <button class="action-btn" routerLink="/profile">
-                    <i class="fa-solid fa-user"></i>
-                    <span>Profile</span>
+                <button class="action-btn" routerLink="/products">
+                    <i class="fa-solid fa-tags"></i>
+                    <span>Products</span>
                 </button>
             </div>
         </div>
-
+        <!-- Quick Actions -->
+        <div class="quick-actions">
+            <h2>Settings</h2>
+            <div class="action-buttons">
+                <button class="action-btn" routerLink="">
+                    <i class="fa-solid fa-layer-group"></i>
+                    <span>Matric</span>
+                </button>
+                <button class="action-btn" routerLink="">
+                    <i class="fa-solid fa-tags"></i>
+                    <span>Tax</span>
+                </button>
+                <button class="action-btn" routerLink="">
+                    <i class="fa-solid fa-tags"></i>
+                    <span>Finance</span>
+                </button>
+                <button class="action-btn" routerLink="">
+                    <i class="fa-solid fa-tags"></i>
+                    <span>Payment Method</span>
+                </button>
+                <button class="action-btn" routerLink="">
+                    <i class="fa-solid fa-tags"></i>
+                    <span>Bill</span>
+                </button>
+            </div>
+        </div>
         <!-- Dashboard Stats Grid -->
         <div class="stats-grid">
             <div class="stat-card">
