matric product tax UI added

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -22,7 +22,7 @@
                     <span>Subcategories</span>
                 </button>
                 <button class="action-btn" routerLink="/products">
-                    <i class="fa-solid fa-tags"></i>
+                    <i class="fa-solid fa-box"></i>
                     <span>Products</span>
                 </button>
             </div>
@@ -31,25 +31,25 @@
         <div class="quick-actions">
             <h2>Settings</h2>
             <div class="action-buttons">
-                <button class="action-btn" routerLink="">
-                    <i class="fa-solid fa-layer-group"></i>
-                    <span>Matric</span>
+                <button class="action-btn" routerLink="/metric">
+                    <i class="fa-solid fa-ruler"></i>
+                    <span>Metrics</span>
                 </button>
-                <button class="action-btn" routerLink="">
-                    <i class="fa-solid fa-tags"></i>
+                <button class="action-btn" routerLink="/tax">
+                    <i class="fa-solid fa-percent"></i>
                     <span>Tax</span>
                 </button>
-                <button class="action-btn" routerLink="">
-                    <i class="fa-solid fa-tags"></i>
+                <button class="action-btn" routerLink="/settings/finance">
+                    <i class="fa-solid fa-chart-line"></i>
                     <span>Finance</span>
                 </button>
-                <button class="action-btn" routerLink="">
-                    <i class="fa-solid fa-tags"></i>
+                <button class="action-btn" routerLink="/settings/payment-list">
+                    <i class="fa-solid fa-credit-card"></i>
                     <span>Payment Method</span>
                 </button>
-                <button class="action-btn" routerLink="">
-                    <i class="fa-solid fa-tags"></i>
-                    <span>Bill</span>
+                <button class="action-btn" routerLink="/settings">
+                    <i class="fa-solid fa-file-invoice"></i>
+                    <span>Settings</span>
                 </button>
             </div>
         </div>
